<resources>
    <string name="app_name">Sidra Naseem LMS</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_my_courses">My Course</string>
    <string name="title_account">Account</string>
    <string name="title_my_course">My Courses</string>
    <string name="title_sections">Course Detail</string>
    <string name="download_permission_explaination">In order to download files, you need to grant us permission to your storage. After granting us access, you may go ahead and download the file.</string>
    <string name="download_permission_grant">Grant permission</string>
    <string name="title_downloaded_videos">Downloaded Videos</string>
    <string name="title_downloaded_sections">Downloaded Course Detail</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="player_time_separator">:</string>
    <string name="back_btn">Back Button</string>
    <string name="player_menu">Player Menu</string>
    <string name="lock">Lock icon</string>
    <string name="exo_controls_speed_description">Playback Speed</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
</resources>