<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_my_courses">

    <fragment
        android:id="@+id/navigation_my_courses"
        android:name="com.dusre.lms.ui.MyCourseFragment"
        android:label="@string/title_my_course"
        tools:layout="@layout/fragment_my_course" >
        <action
            android:id="@+id/action_navigation_my_courses_to_navigation_course_details"
            app:destination="@id/navigation_sections"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/slide_out" />
    </fragment>


    <fragment
        android:id="@+id/navigation_sections"
        android:name="com.dusre.lms.ui.SectionsFragment"
        android:label="@string/title_sections"
        tools:layout="@layout/course_detail_layout" >
        <action
            android:id="@+id/action_navigation_sections_to_navigation_video_player"
            app:destination="@id/navigation_video_player"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/slide_out"/>

    </fragment>
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.dusre.lms.ui.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" >
        <action
            android:id="@+id/action_navigation_account_to_navigation_downloaded_videos"
            app:destination="@id/navigation_downloaded_videos"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/slide_out"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_video_player"
        android:name="com.dusre.lms.ui.VideoPlayerFragment"
        android:label="@string/title_sections"
        tools:layout="@layout/fragment_player_layout" />

    <fragment
        android:id="@+id/navigation_downloaded_videos"
        android:name="com.dusre.lms.ui.DownloadedVideoFragment"
        android:label="@string/title_downloaded_videos"
        tools:layout="@layout/fragment_downloaded_courses" >
        <action
            android:id="@+id/action_navigation_downloaded_courses_to_navigation_downloaded_course_details"
            app:destination="@id/navigation_downloaded_sections"
            app:popUpToInclusive="false"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/slide_out"/>


    </fragment>
    <fragment
        android:id="@+id/navigation_downloaded_sections"
        android:name="com.dusre.lms.ui.DownloadedSectionsFragment"
        android:label="@string/title_downloaded_sections"
        tools:layout="@layout/downloaded_course_detail_layout" >
        <action
            android:id="@+id/action_navigation_downloaded_sections_to_navigation_video_player"
            app:destination="@id/navigation_video_player"
            app:launchSingleTop="false"
            app:popUpToInclusive="false"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/slide_out"/>

    </fragment>


</navigation>